# prism-rs

./: Cargo.toml  LICENSE  README.md
examples/: demo_layout.rs  demo_spinner.rs  demo_style.rs  demo_table.rs
src/: activity_line.rs  ansi.rs  args.rs  badge.rs  banner.rs  block.rs  braille.rs  columns.rs  command_router.rs  cursor.rs  diff.rs  elapsed.rs  error.rs  exec.rs  file_preview.rs  flex.rs  frame.rs  heatmap.rs  highlight.rs  input_line.rs  keypress.rs  layout.rs  lib.rs  line_editor.rs  list.rs  live.rs  log.rs  markdown.rs  number.rs  progress.rs  progress_bar.rs  prompt.rs  repl.rs  scroll.rs  section_block.rs  spinner.rs  statusbar.rs  stream.rs  style.rs  table.rs  (+4 more)
tests/: activity_line_test.rs  ansi_test.rs  args_test.rs  badge_test.rs  banner_test.rs  columns_test.rs  command_router_test.rs  diff_test.rs  exec_test.rs  frame_test.rs  highlight_test.rs  integration_test.rs  line_editor_test.rs  list_test.rs  markdown_test.rs  progress_bar_test.rs  section_block_test.rs  spinner_test.rs  statusbar_test.rs  style_test.rs  table_test.rs  text_test.rs  timer_test.rs  unicode_test.rs  writer_test.rs
